# ComfyUI_SteadyDancer

./: .gitignore  README.md  SteadyDancer_node.py  __init__.py  pyproject.toml  requirements.txt
SteadyDancer/: README.md  custom_linear.py  generate.py  generate_dancer.py
SteadyDancer/preprocess/: dump_video_images.py  pose_align.py  pose_align_withdiffaug.py  pose_extra.py  utils_aug.py
SteadyDancer/preprocess/output/video00001_img00001/example/: prompt.txt
SteadyDancer/preprocess/output/video00002_img00002/example/: prompt.txt
SteadyDancer/preprocess/pose/script/: dwpose.py  util.py
SteadyDancer/wan/: __init__.py  image2video_dancer.py  pipeline_wan_i2v.py  transformer_wan.py
SteadyDancer/wan/configs/: __init__.py
SteadyDancer/wan/distributed/: xdit_context_parallel.py  xdit_context_parallel_dancer.py
SteadyDancer/wan/modules/: model_dancer.py  small_archs.py
SteadyDancer/wan/utils/: __init__.py
example_workflows/: steadydancer.json
