[project]
name = "steadydancer"
description = "SteadyDancer: Harmonized and Coherent Human Image Animation with First-Frame Preservation,Minimize the number of libraries and VRAMs as much as possible"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch>=2.4.0", "torchvision>=0.19.0", "opencv-python>=4.9.0.80", "diffusers>=0.31.0", "transformers>=4.49.0", "tokenizers>=0.20.3", "accelerate>=1.1.1", "tqdm", "imageio", "easydict", "ftfy", "dashscope", "imageio-ffmpeg", "flash_attn", "#gradio>=5.0.0", "numpy>=1.23.5,<2", "gguf", "omegaconf"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_SteadyDancer"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_SteadyDancer"
Icon = ""
includes = []
